Fix User controller
