# src/swagger/swagger_v3.json
@@ -1,22 +1,11 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "test-app",
+    "title": "ts-app",
     "version": "1.0.0",
     "description": "Specification JSONs: [v2](/api-spec/v2), [v3](/api-spec/v3)."
   },
   "paths": {
-    "/data": {
-      "get": {
-        "summary": "/data",
-        "responses": {
-          "304": {
-            "description": ""
-          }
-        },
-        "tags": []
-      }
-    },
     "/users/{id}": {
       "get": {
         "summary": "/users/{id}",
@@ -25,12 +14,85 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "example": 1,
             "schema": {
-              "type": "string"
+              "type": "integer"
             }
           }
         ],
-        "responses": {},
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "This action returns user #1"
+                }
+              },
+              "text/html": {
+                "schema": {
+                  "type": "string",
+                  "example": "This action returns user #1"
+                }
+              }
+            }
+          },
+          "304": {
+            "description": ""
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Error: \n    at new HttpError (D:\\ts_api\\node_modules\\src\\http-error\\HttpError.ts:16:18)\n    at new NotFoundError (D:\\ts_api\\node_modules\\src\\http-error\\NotFoundError.ts:10:5)\n    at ExpressDriver.handleSuccess (D:\\ts_api\\node_modules\\src\\driver\\express\\ExpressDriver.ts:324:15)\n    at D:\\ts_api\\node_modules\\src\\RoutingControllers.ts:164:35\n    at processTicksAndRejections (internal/process/task_queues.js:95:5)"
+                }
+              },
+              "text/html": {
+                "schema": {
+                  "type": "string",
+                  "example": "Error: \n    at new HttpError (D:\\ts_api\\node_modules\\src\\http-error\\HttpError.ts:16:18)\n    at new NotFoundError (D:\\ts_api\\node_modules\\src\\http-error\\NotFoundError.ts:10:5)\n    at ExpressDriver.handleSuccess (D:\\ts_api\\node_modules\\src\\driver\\express\\ExpressDriver.ts:324:15)\n    at D:\\ts_api\\node_modules\\src\\RoutingControllers.ts:164:35\n    at processTicksAndRejections (internal/process/task_queues.js:95:5)"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "{}<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n<meta charset=\"utf-8\">\n<title>Error</title>\n</head>\n<body>\n<pre>RangeError [ERR_HTTP_INVALID_STATUS_CODE]: Invalid status code: undefined<br> &nbsp; &nbsp;at new NodeError (internal/errors.js:322:7)<br> &nbsp; &nbsp;at ServerResponse.writeHead (_http_server.js:259:11)<br> &nbsp; &nbsp;at ServerResponse.writeHead (D:\\ts_api\\node_modules\\on-headers\\index.js:44:26)<br> &nbsp; &nbsp;at ServerResponse._implicitHeader (_http_server.js:250:8)<br> &nbsp; &nbsp;at write_ (_http_outgoing.js:711:9)<br> &nbsp; &nbsp;at ServerResponse.end (_http_outgoing.js:825:5)<br> &nbsp; &nbsp;at ServerResponse.res.end (D:\\ts_api\\node_modules\\express-oas-generator\\lib\\processors.js:247:14)<br> &nbsp; &nbsp;at ServerResponse.send (D:\\ts_api\\node_modules\\express\\lib\\response.js:221:10)<br> &nbsp; &nbsp;at ServerResponse.json (D:\\ts_api\\node_modules\\express\\lib\\response.js:267:15)<br> &nbsp; &nbsp;at GlobalErrorHandler.error (D:\\ts_api\\src\\middleware\\global-error-handler.ts:10:35)</pre>\n</body>\n</html>\n"
+                }
+              },
+              "text/html": {
+                "schema": {
+                  "type": "string",
+                  "example": "{}<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n<meta charset=\"utf-8\">\n<title>Error</title>\n</head>\n<body>\n<pre>RangeError [ERR_HTTP_INVALID_STATUS_CODE]: Invalid status code: undefined<br> &nbsp; &nbsp;at new NodeError (internal/errors.js:322:7)<br> &nbsp; &nbsp;at ServerResponse.writeHead (_http_server.js:259:11)<br> &nbsp; &nbsp;at ServerResponse.writeHead (D:\\ts_api\\node_modules\\on-headers\\index.js:44:26)<br> &nbsp; &nbsp;at ServerResponse._implicitHeader (_http_server.js:250:8)<br> &nbsp; &nbsp;at write_ (_http_outgoing.js:711:9)<br> &nbsp; &nbsp;at ServerResponse.end (_http_outgoing.js:825:5)<br> &nbsp; &nbsp;at ServerResponse.res.end (D:\\ts_api\\node_modules\\express-oas-generator\\lib\\processors.js:247:14)<br> &nbsp; &nbsp;at ServerResponse.send (D:\\ts_api\\node_modules\\express\\lib\\response.js:221:10)<br> &nbsp; &nbsp;at ServerResponse.json (D:\\ts_api\\node_modules\\express\\lib\\response.js:267:15)<br> &nbsp; &nbsp;at GlobalErrorHandler.error (D:\\ts_api\\src\\middleware\\global-error-handler.ts:10:35)</pre>\n</body>\n</html>\n"
+                }
+              }
+            }
+          },
+          "undefined": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                }
+              },
+              "text/html": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                }
+              }
+            }
+          }
+        },
         "tags": []
       },
       "post": {
@@ -246,6 +308,17 @@
                 }
               }
             }
+          }
+        },
+        "tags": []
+      }
+    },
+    "/data": {
+      "get": {
+        "summary": "/data",
+        "responses": {
+          "304": {
+            "description": ""
           }
         },
         "tags": []
